# ocr

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.md  MODEL_COMPATIBILITY_MATRIX.md  README.md  TEST_SUITE_README.md  advanced_ocr_app.py  ai_vs_traditional_battle.py  comprehensive_test_suite.py  gradio_app.py  gradio_app_fixed.py  gradio_main.py  gradio_minimal.py  kill_7860.sh  ocr_tester.py  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh  structured_benchmark.py  test_call.sh  test_judge_system.py  test_report_20250623_193506.md  test_results_20250623_193506.json
src/: config.py  factory.py  judge_llm.py  schemas.py
src/providers/: base.py  openrouter_provider.py  structured_provider.py  traditional_provider.py
