[tool.poetry]
name = "advanced-ocr-benchmark"
version = "2.0.0"
description = "Advanced OCR Benchmark Suite - Comprehensive comparison of traditional OCR vs Vision Language Models with structured JSON extraction"
authors = ["Claude Code <noreply@anthropic.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/your-username/advanced-ocr-benchmark"
repository = "https://github.com/your-username/advanced-ocr-benchmark"
keywords = ["ocr", "vision", "language-models", "benchmark", "structured-extraction", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Text Processing :: General",
]

[tool.poetry.dependencies]
python = "^3.9"
# Core dependencies
httpx = "^0.27.0"
pydantic = "2.10.6"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.0"
Pillow = "^10.0.0"
aiofiles = "^23.2.0"

# UI frameworks
gradio = "4.44.0"
plotly = "^5.17.0"

# Traditional OCR engines
easyocr = "^1.7.0"
paddleocr = "^2.7.3"
pytesseract = "^0.3.10"

# Image processing
opencv-python = "^4.8.0"
numpy = "^1.24.0"

# Data handling
pandas = "^2.0.0"
matplotlib = "^3.7.0"

# Legacy OpenAI (for compatibility)
openai = { version = "^1.12.0", optional = true }
paddlepaddle = "^3.0.0"

[tool.poetry.extras]
legacy = ["openai"]

[tool.poetry.scripts]
ocr-benchmark = "run_tests:main"
gradio-ui = "gradio_main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"